--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.7.1"
+  "packageManager": "pnpm@10.7.1",
+  "dependencies": {
+    "@libsql/client": "^0.15.2",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "libsql": "^0.5.4"
+  }
 }
